<resources>
    <string name="app_name">Ventura Wealth</string>
    <string name="term_condition_description">1.\tVentura Wealth is an application belonging to Ventura Securities Limited.
        By accessing the application you agree to abide by and bound by the Terms and Conditions. Ventura reserves the right
        to modify the terms and conditions (Terms) of the Service and Disclaimer without any prior notification. You are advised
        to regularly review the Terms. If you do not agree with any of the Terms and any amendments thereof, you must not use
        this site/service.\n\n
        2.\tYou are aware about the features, risks, responsibilities, obligations and liabilities associated with securities
        trading through wireless technology/internet/smart order routing or any other technology which is offered to you
        through Ventura.\n\n
        3.\tYou are aware that Ventura IBT system itself generates the initial password and its password policy as stipulated
        is in line with norms prescribed by Exchanges/SEBI.\n\n
        4.\tYou shall be responsible for keeping the user id and password confidential and secure and shall be solely
        responsible for all orders entered and transactions done by any person whomsoever through Ventura Wealth using your
        User Id and/or Password whether or not such person authorized to do so. You are aware that authentication technologies
        and strict security measures are required for the securities trading through wireless technology through order routed
        system and undertake to ensure that you/your authorized representatives password are not revealed to any third party
        including employees and dealers of stock broker.\n\n
        5.\tYou will immediately notify Ventura in writing if your forget password, discover security flaw in Ventura Wealth,
        discovers/suspects discrepancies / unauthorized access through your userid/password/account with full details of such
        unauthorized use, the date, the manner and the transactions effected pursuant to such unauthorized use, etc.\n\n
        6.\tYou are fully aware of and understand the risks associated with availing of a service for routing orders over the
        securities trading through wireless technology and Client shall be fully liable and responsible for any and all acts
        done in the Clients UserId/password in any manner whatsoever.\n\n
        7.\tVentura shall send the order/trade confirmation on the device of the client.\n\n
        8.\tYou are aware that trading over the internet and through wireless technology involves many uncertain factors and
        complex hardware, software, systems communication lines, peripherals, etc. are susceptible to interruptions and
        dislocation. Ventura and the Exchange do not make any representation or warranty that the Venturas IBT Service will be
        available to you at all the times without any interruption.\n\n
        9.\tYou shall not have any claim against the Exchange or Ventura on account of any suspension/interruption,
        non-availability of malfunctioning of Venturas IBT system or Service or the Exchanges service or systems or
        non-execution of your orders due to any link/system failure at your end/Ventura/Exchanges and for any reason beyond
        the control of Ventura/Exchange.\n\n
        10.\tThe information provided on this Site is for General information purposes and should not be substituted for
        professional advice. No advice or information, whether oral or written, which the user obtains from Ventura or through
        the application shall create any warranty not expressly made herein.\n\n
        11.\tVentura disclaims all warrants and conditions with regards to the accuracy, adequacy or any information and is not
        responsible for any errors or omissions of the information provided on the application, you should verify the veracity
        of all content/information on your own before undertaking reliance and auctioning. In no event shall Ventura be
        responsible for any direct, indirect, punitive incidental, special, consequential damage, loss, loss of profit, harm
        or injury arising in any manner whatsoever, including those arising directly, indirectly, consequentially or otherwise
        and whether financial, mental or otherwise, caused to any person arising out of or in any way connected with the user
        or performance of the Ventura Wealth/service or related service whether based on contract, tort, negligence, strict
        liability or otherwise by Ventura or any of its soldieries, affiliates, officers, employees, agents, representatives,
        licensors, content providers, enabling partners.\n\n
        12.\tYou agree that this Service is made available to you for personal non-commercial use and you further undertake not
        to sell, use reproduce, modify, alter, decompile, reengineer, edit, translate, transmit, copy, publish, perform, display
        or post any content emanating from this application.\n\n
        13.\tYou agree to indemnify and hold Ventura, subsidiaries, affiliates, officers and employees, harmless from any claim,
        demand, or damage, including reasonable attorneys fees asserted by any third party due to or arising out of your use
        or conduct on the Ventura sites/services/applications.\n\n
        14.\tThe graphics and content on this site are the copyrighted work of Ventura and contain proprietary trademarks
        and trade names of the Company. No right or license is granted under copyright, patent or trademark of Ventura to
        any person.\n\n
        15.\tThe information, software, products, and services included in or available through Ventura Wealth
        application/services may include inaccuracies or typographical errors. Changes are periodically made to the Ventura
        Wealth application/services and to the information therein. Ventura may make improvements and/or changes in the Ventura
        Wealth application/services at any time. Advice received via the Ventura Wealth application/services should not be relied
        upon for personal, medical, legal or financial decisions and you should consult an appropriate professional for specific
        advice tailored to your situation.\n\n
        16.\tVentura and/or its respective suppliers make no representations about the suitability reliability, availability,
        timeliness, lack of viruses or other harmful components and accuracy of the information, software, products, services
        and related graphics contained within the Ventura Wealth application/services for any purpose. All such information,
        software products, services and related graphics are provided as is without warranty of any kind. Ventura Wealth and/or
        its respective suppliers hereby disclaim all warranties and conditions with regard to this information, software,
        products, services and related graphics, including all implied warranties and conditions of merchantability, fitness
        for a particular purpose, workmanlike effort, title and non-infringement.\n\n
        17.\tThe application may contain link to other web sites/applications operated by third parties (linked sites).
        You acknowledge that, when you click on a link to visit a linked site. You also acknowledge that Ventura Wealth is
        providing these links to you only as a convenience.\n\n
        18.\tYou specifically agree that Ventura shall not be responsible for unauthorized access to or alteration of your
        transmissions or data, any material or data sent or received or not sent or received, or any transactions entered into
        through a Ventura Wealth application/service. You specifically agree that Ventura Wealth is not responsible or liable
        for any threatening, defamatory, obscene, offensive or illegal  content or conduct of any other party or any
        infringement of anothers rights, including intellectual property rights. You specifically agree that Ventura Wealth
        is not responsible for any content sent using and/or included in a Ventura Wealth
        application/service by any third party.\n</string>
    <string name="action_nodatatext">Sorry, currently no issues going on.
        \n\nWould you like to be reminded for future issue?</string>
    <string name="action_nodatatext_reminded">Currently No Issues Available.\n\nYou will receive an SMS/ E-mail
        on your Mobile/ E-mail ID registered with Ventura.\n\nFor any query you can contact us on </string>
    <string name="action_nodata">Currently No Issues Available.</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_trade">Trade</string>
    <string name="action_logout">Logout</string>
    <string name="action_exit">Exit</string>
    <string name="desc">image</string>
    <string name="c_id">Client Id</string>
    <string name="password">Password</string>
    <string name="pin">Pin</string>
    <string name="pan">PAN</string>
    <string name="dob">DOB</string>
    <string name="pan_hint">Pan: 10 Characters</string>
    <string name="dob_hint">DOB : DD/MM/YYYY</string>
    <string name="login">Login</string>
    <string name="authenticator_desc2">Download the latest Authenticator App <u><b>from here</b>.</u></string>
    <string name="authenticator_desc10">Looks like you haven\'t set up Google Authenticator. For faster authentication and enhanced security please complete the setup now</string>
    <string name="authenticator_desc11">It is a simple process and gets done in no time. \n<b><font color="#FFFFFF">Check here</font></b> for instructions.</string>
    <string name="authenticator_desc12"><b><font color="#FFFFFF">Instructions : </font></b>
        \n\n1. Enter OTP and Pin when prompted.
        \n\n2. Tap on 📑 to copy the setup code and tap on \'Google Authenticator\' button.
        \n\n3. Tap on \'Add\' button then tap on \'Enter a setup key\'
        \n\n4. In \'Account Name\' type \'Ventura Wealth\' and in \'Your key\' long press and paste the copied Setup Code.
        \n\n5. Tap on \'Add\' button and you are done!</string>
    <string name="auth_yes">Yes, I want to Setup Authenticator Now</string>
    <string name="auth_no"><u>No, I will register later</u></string>
</resources>