<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="xtrem.xneutrino.Reports_New">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="99"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_trade"
        android:orderInCategory="100"
        android:title="@string/action_trade"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="102"
        android:title="@string/action_logout"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="103"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>
