<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/item_height"
            android:paddingLeft="@dimen/item_height"
            android:paddingRight="@dimen/item_height"
            android:paddingBottom="@dimen/common_margine">
            <RelativeLayout
                android:id="@+id/tradeRelative"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/trade_linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/border"
                    android:layout_centerHorizontal="true">
                    <EditText
                        android:id="@+id/clientID"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_height"
                        android:hint="@string/c_id"
                        android:padding="@dimen/common_margine"
                        android:longClickable="false"
                        android:inputType="phone"
                        android:imeOptions="actionNext"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/common_textsize"
                        android:textColorHint="@color/silver"
                        android:drawableStart="@drawable/img_man"
                        android:drawablePadding="@dimen/common_margine"
                        android:textColor="@color/white"
                        android:drawableLeft="@drawable/img_man" />
                    <include layout="@layout/view"/>
                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_height"
                        android:hint="@string/password"
                        android:singleLine="true"
                        android:maxLength="12"
                        android:password="true"
                        android:background="@null"
                        android:padding="@dimen/common_margine"
                        android:longClickable="false"
                        android:gravity="center_vertical"
                        android:imeOptions="actionNext"
                        android:textSize="@dimen/common_textsize"
                        android:textColorHint="@color/silver"
                        android:drawableStart="@drawable/img_lock"
                        android:drawablePadding="@dimen/common_margine"
                        android:textColor="@color/white"
                        android:drawableLeft="@drawable/img_lock" />
                    <include layout="@layout/view"/>

                    <EditText
                        android:id="@+id/pin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_height"
                        android:hint="@string/pin"
                        android:singleLine="true"
                        android:password="true"
                        android:maxLength="12"
                        android:background="@null"
                        android:padding="@dimen/common_margine"
                        android:longClickable="false"
                        android:gravity="center_vertical"
                        android:imeOptions="actionNext"
                        android:textSize="@dimen/common_textsize"
                        android:textColorHint="@color/silver"
                        android:drawableStart="@drawable/img_lock"
                        android:drawablePadding="@dimen/common_margine"
                        android:textColor="@color/white"
                        android:drawableLeft="@drawable/img_lock" />
                    <include layout="@layout/view"/>
                    <RadioGroup
                        android:id="@+id/tradeRDgroup"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/item_height"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/panRDbutton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorAccent"
                            android:text="@string/pan"
                            android:checked="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/common_textsize"/>
                        <RadioButton
                            android:id="@+id/dobRDbutton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorAccent"
                            android:text="@string/dob"
                            android:textColor="@color/white"
                            android:textSize="@dimen/common_textsize"
                            android:layout_marginStart="@dimen/common_margine"
                            android:layout_marginLeft="@dimen/common_margine" />
                    </RadioGroup>
                   <include layout="@layout/view"/>
                    <EditText
                        android:id="@+id/pan"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_height"
                        android:hint="@string/pan_hint"
                        android:background="@null"
                        android:singleLine="true"
                        android:inputType="textCapCharacters"
                        android:password="true"
                        android:maxLength="10"
                        android:padding="@dimen/common_margine"
                        android:longClickable="false"
                        android:gravity="center_vertical"
                        android:imeOptions="actionDone"
                        android:textSize="@dimen/common_textsize"
                        android:textColorHint="@color/silver"
                        android:textColor="@color/white" />
                    <RelativeLayout
                        android:id="@+id/dobRelative"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_height"
                        android:gravity="center_vertical"
                        android:visibility="gone">
                        <EditText
                            android:id="@+id/dob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/dob_hint"
                            android:singleLine="true"
                            android:inputType="date"
                            android:password="true"
                            android:background="@null"
                            android:maxLength="10"
                            android:longClickable="false"
                            android:imeOptions="actionDone"
                            android:textSize="@dimen/common_textsize"
                            android:textColorHint="@color/silver"
                            android:layout_marginStart="@dimen/common_margine"
                            android:drawablePadding="@dimen/common_margine"
                            android:padding="@dimen/common_margine"
                            android:textColor="@color/white"
                            android:layout_marginLeft="@dimen/common_margine" />
                        <ImageView
                            android:id="@+id/calenderImage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:src="@drawable/img_cal"
                            android:layout_marginEnd="4dp"
                            android:layout_alignParentEnd="true"
                            android:contentDescription="@string/desc"
                            android:layout_marginRight="4dp"
                            android:layout_alignParentRight="true" />
                    </RelativeLayout>
                </LinearLayout>
                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/item_height"
                    android:layout_marginTop="@dimen/big_margine"
                    android:layout_below="@+id/trade_linearLayout"
                    android:background="@drawable/border"
                    android:text="@string/login"
                    android:textSize="@dimen/common_textsize"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:paddingStart="@dimen/item_height"
                    android:paddingEnd="@dimen/item_height"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
