<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Reminder layout with yes and no button>-->
    <LinearLayout
    android:id="@+id/reminder_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:visibility="gone">

    <TextView
        android:id="@+id/textView_nodata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/action_nodatatext"
        android:textColor="@android:color/white"
        android:textSize="13sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/yes1"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:text="Yes"
            android:textColor="@color/white"
            android:layout_marginRight="10dp"
            android:background="@drawable/bond_btn"
            android:textSize="13sp"
            />

        <Button
            android:id="@+id/no"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:text="No"
            android:textColor="@color/white"
            android:background="@drawable/border"
            android:textSize="13sp"/>

    </LinearLayout>
    
</LinearLayout>

    <!--for yes button>-->
    <LinearLayout
        android:id="@+id/reminder_applied_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_nodatatext_reminded"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/bondemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:gravity="center"/>
        </LinearLayout>

    <!--for no button>-->
    <LinearLayout
        android:id="@+id/nodata_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_nodata"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:gravity="center"/>

    </LinearLayout>

    </LinearLayout>

